--- a/site/second.html
+++ b/site/second.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello coursera</h1>
+    <h1>hello coursera so this github wahala is much but I'll be very good with it</h1>
 </body>
 </html>
